# CroPDUster

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.github/workflows/: build.yml  lint.yml  release.yml  scorecard.yml
application/: Cargo.toml  memory.x
application/src/: auth.rs  config.rs  gpio.rs  hlw8012.rs  index.html  main.rs  sensors.rs  storage.rs
application/src/web/: admin.rs  gpio.rs  mod.rs  sensors.rs  status.rs  update.rs
archive/.theia/: launch.json
archive/nbproject/: Makefile-default.mk  Makefile-local-default.mk  configurations.xml
bootloader/: Cargo.toml  memory.x
bootloader/.cargo/: config.toml
nbproject/: Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  project.xml
tasks/: task-01-flash.md  task-02-deps.md  task-03-xtask.md  task-04-core.md  task-05-web.md  task-06-ui.md  task-07-main.md
xtask/: Cargo.toml
xtask/src/: main.rs
