[workspace]
members = [
    "application",
    "bootloader",
    "xtask"
]
resolver = "2"

[workspace.dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
defmt = "1"
defmt-rtt = "1"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "nightly"] }
embassy-futures = "0.1.2"
embassy-rp = { version = "0.9.0", features = ["unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
embassy-net = { version = "0.8.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4"] }
embassy-boot-rp = { version = "0.9.0" }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io-async = { version = "0.7", features = ["defmt-03"] }
futures = { version = "0.3.31", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
heapless = { version = "0.8", features = ["portable-atomic-critical-section"] }
log = "0.4.28"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
portable-atomic = { version = "1.11.1", features = ["critical-section"] }
static_cell = "2.1.1"
picoserve   = { version = "0.18", features = ["embassy", "defmt", "json"] }
ekv         = { version = "1.0", features = ["defmt", "page-size-4096", "max-page-count-64", "erase-value-255", "max-key-size-64", "max-value-size-256", "max-chunk-size-512"] }
sha2        = { version = "0.10", default-features = false }
serde       = { version = "1.0", default-features = false, features = ["derive"] }

[patch.crates-io]
embassy-executor     = { git = "https://github.com/embassy-rs/embassy", rev = "3651d8ef249dc20d30df7382237f2451d889c011" }
embassy-futures      = { git = "https://github.com/embassy-rs/embassy", rev = "3651d8ef249dc20d30df7382237f2451d889c011" }
embassy-rp           = { git = "https://github.com/embassy-rs/embassy", rev = "3651d8ef249dc20d30df7382237f2451d889c011" }
embassy-sync         = { git = "https://github.com/embassy-rs/embassy", rev = "3651d8ef249dc20d30df7382237f2451d889c011" }
embassy-time         = { git = "https://github.com/embassy-rs/embassy", rev = "3651d8ef249dc20d30df7382237f2451d889c011" }
embassy-net          = { git = "https://github.com/embassy-rs/embassy", rev = "3651d8ef249dc20d30df7382237f2451d889c011" }
embassy-boot         = { git = "https://github.com/embassy-rs/embassy", rev = "3651d8ef249dc20d30df7382237f2451d889c011" }
embassy-boot-rp      = { git = "https://github.com/embassy-rs/embassy", rev = "3651d8ef249dc20d30df7382237f2451d889c011" }
embassy-net-wiznet   = { git = "https://github.com/embassy-rs/embassy", rev = "3651d8ef249dc20d30df7382237f2451d889c011" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "3651d8ef249dc20d30df7382237f2451d889c011" }

[profile.release]
debug = true
incremental = false
codegen-units = 1
opt-level = "s"
lto = "fat"
