[package]
edition = "2021"
name = "pdu-rp-application"
version = "0.1.0"
description = "Runtime application for the PDU"
license = "Apache-2.0"
publish = false

[dependencies]
embassy-sync = { version = "0.7.2" }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.5.0", features = [] }
embassy-rp = { version = "0.9.0", features = ["time-driver", "rp2040", "critical-section-impl"] }
embassy-boot-rp = { version = "0.9.0", features = [] }
embassy-embedded-hal = { version = "0.5.0" }
embassy-futures = { version = "0.1.2" }
embassy-net = { version = "0.8.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4"] }
embassy-net-wiznet = { version = "0.2.1", features = ["defmt"] }

picoserve = { version = "0.18" }
ekv       = { version = "1.0" }
sha2      = { version = "0.10", default-features = false }
serde     = { version = "1.0", default-features = false, features = ["derive"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
panic-reset = { version = "0.1.1", optional = true }
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.7", features = ["defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
heapless = "0.8"

[features]
default = ["panic-reset"]
debug = [
    "embassy-rp/defmt",
    "embassy-boot-rp/defmt",
    "embassy-sync/defmt",
    "panic-probe"
]
skip-include = []

