[package]
edition = "2021"
name = "pdu-rp-application"
version = "0.1.0"
description = "Runtime application for the PDU"
license = "Apache-2.0"
publish = false

[dependencies]
embassy-sync = { workspace = true, features = ["defmt"] }
embassy-executor = { workspace = true, features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-time = { workspace = true, features = [] }
embassy-rp = { workspace = true, features = ["time-driver", "rp2040", "critical-section-impl", "defmt"] }
embassy-boot-rp = { workspace = true, features = ["defmt"] }
embassy-embedded-hal = { version = "0.6.0" }
embassy-futures = { workspace = true }
embassy-net = { workspace = true, features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4"] }
embassy-net-wiznet = { version = "0.3.0", features = ["defmt"] }

picoserve     = { version = "0.18", features = ["embassy", "json", "defmt"] }
ekv           = { version = "1.0", features = ["defmt", "page-size-4096", "max-page-count-64", "erase-value-255", "max-key-size-64", "max-value-size-256", "max-chunk-size-512"] }
# embassy-sync 0.6.x is pulled in by ekv; alias it so we can use its RawMutex
# with the ekv Database type (the two embassy-sync versions are ABI-incompatible).
embassy-sync-ekv = { version = "0.6.2", package = "embassy-sync" }
sha2          = { version = "0.10", default-features = false }
serde         = { version = "1.0", default-features = false, features = ["derive"] }
base64        = { version = "0.22", default-features = false }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
panic-reset = { version = "0.1.1", optional = true }
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.7", features = ["defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
heapless = "0.8"

[features]
default = ["panic-reset"]
debug = ["panic-probe"]
skip-include = []

# 'panic-reset' and 'panic-probe' are mutually exclusive.
# Build with --no-default-features --features debug to use panic-probe.

