[package]
edition = "2021"
name = "pdu-rp-bootloader"
version = "0.1.0"
description = "Bootloader for the PDU"
license = "Apache-2.0"
publish = false

[dependencies]
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }

embassy-rp = { workspace = true, features = ["rp2040", "critical-section-impl"] }
embassy-boot-rp = { workspace = true}
embassy-sync = { workspace = true}
embassy-time = { workspace = true, features = [] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = { version = "0.7" }
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.0"
cfg-if = "1.0.0"

[features]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "embassy-boot-rp/defmt",
    "embassy-rp/defmt",
]

